--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,12 @@
 
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic'>
     <link rel="stylesheet" href="./bower_components/angular-material/angular-material.css"/>
+    <link rel="stylesheet" href="./bower_components/angular-material/angular-material.css"/>
     <link rel="stylesheet" href="assets/app.css"/>
 
     <!-- Remove this when building your app -->
     <link rel="stylesheet" href="assets/demo.css"/>
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style type="text/css">
         /**
          * Hide when Angular is not yet loaded and initialized
@@ -26,22 +27,17 @@
 
 </head>
 
-<body ng-app="adminApp" layout="row" ng-cloak>
+<body ng-app="adminApp" layout="row">
 
-<div flex tabIndex="-1" role="main" class="">
-    <md-content flex class="md-whiteframe-z2" layout="columnt">
-        <div class="site-title">
-            <h2 class="light">Admin page</h2>
-        </div>
-        <div ui-view></div>
-    </md-content>
+<div flex layout-fill ng-view>
+
 </div>
 
 <script src="./bower_components/angular/angular.js"></script>
 <script src="./bower_components/angular-animate/angular-animate.js"></script>
 <script src="./bower_components/angular-aria/angular-aria.js"></script>
 <script type="text/javascript" src="./bower_components/angular-material/angular-material.js"></script>
-<script type="text/javascript" src="./bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script type="text/javascript" src="./bower_components/angular-route/angular-route.js"></script>
 
 <!-- <script src="./src/users/Users.js"></script>
 <script src="./src/users/UserController.js"></script>
