-added feature to move images to archive folder on DELETE request

--- a/app/index.html
+++ b/app/index.html
@@ -28,10 +28,10 @@
 </head>
 
 <body ng-app="adminApp" layout="row">
-
-<div flex layout-fill ng-view>
-
-</div>
+<md-content flex layout-padding>
+    <div flex layout-fill ng-view>
+    </div>
+</md-content>
 
 <script src="./bower_components/angular/angular.js"></script>
 <script src="./bower_components/angular-animate/angular-animate.js"></script>
