-added feature to move images to archive folder on DELETE request

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
 <script src="./src/users/UserController.js"></script>
 <script src="./src/users/UserService.js"></script> -->
 <script src="./app.js"></script>
+<script src="./src/pages/admin/directives/lazyLoadDirective.js"></script>
 <script src="./src/pages/admin/constants/constants.js"></script>
 <script src="./src/pages/admin/service/imagesApiService.js"></script>
 <script src="./src/pages/admin/view/AdminController.js"></script>
