--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Angular Material Seed</title>
+    <title>MEAN gallery demo app</title>
 
     <meta charset="utf-8">
     <meta name="description" content="">
