--- a/app/index.html
+++ b/app/index.html
@@ -46,8 +46,8 @@
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-simple-logger/0.1.7/angular-simple-logger.js'></script>
-<script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/angular-google-maps/2.4.1/angular-google-maps.min.js?key=AIzaSyAXpzMedGAaS6jkzDd0eTeIzUpoI73GF4o'></script>
+<script src='//maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyC_3z6Rw2KudfefQ2kfiEBuqtTs577eU8Y'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/angular-google-maps/2.4.1/angular-google-maps.min.js?key=AIzaSyC_3z6Rw2KudfefQ2kfiEBuqtTs577eU8Y'></script>
 
 
 <script src="./app.js"></script>
